--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,13 +118,13 @@ header nav ul li a {
   text-align: left;
 }
 .my-work {
-  width: 90%;
+  width: 90%;  
   display: flex;
   justify-content: space-around;
   margin: 0 auto 35px auto;
   padding: 20px;
   flex-wrap: wrap;
-  /* align-items: center; */
+  align-items: center;
 }
 .screenshot-grid {
   width: 65%;
@@ -133,15 +133,21 @@ header nav ul li a {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 10px;
-  align-items: center;
+  border: 1px blue solid;
 }
-.screenshot img {
-  width: 200px;
-  max-height: 250px;
-  display: flex;
-  padding: 15px; 
-  /* justify-content: center; */
+.project-img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
 }
 .project-1 {
-  grid-row: 1 / span 2;
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 2;
+}
+.project-2 {
+  grid-row: 2 / span 1;
+}
+.project-3 {
+  grid-row: 2 / span 1;
 }
