--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ header nav ul li a {
   flex-wrap: wrap;
   align-items: center;
 }
-.screenshot-grid {
+/* .screenshot-grid {
   width: 65%;
   font-size: 18px;
   display: grid;
@@ -150,4 +150,32 @@ header nav ul li a {
 }
 .project-3 {
   grid-row: 2 / span 1;
+} */
+.flex-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 65%;
+  border-left: solid 3px darkgoldenrod;
+  position: relative;
+  text-align: center;
+  color: #000;
+  font-size: 10px;
+}
+.flex-list li {
+  height: 40vh;
+  margin: 15px;
+  list-style: none;
+}
+.flex-list img {
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+  border: solid 3px darkgoldenrod;
+}
+.image-text-1 {
+  position: absolute;
+  bottom: 4px;
+  left: 8px;
+
 }
