--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,10 @@ body {
 /* make full page background image */
 
 .background-image {
-  position: relative;
   /* positioned according to parent and previous sibling */
-  height: 100%;
+  position: relative;
   /* element dimensions */
+  height: 100%;
   width: 100%;
 }
 
@@ -23,19 +23,19 @@ body {
   content: "";
   background-image: url("../images/Orange-Background-Wallpaper-HD-16464.png");
   background-repeat: repeat;
-  position: absolute;
   /* position without taking parent or sibling position into account */
-  top: 0px;
+  position: absolute;
   /* when absolute, 0px is the top-left pixel of the page */
+  top: 0px;
   left: 0px;
   right: 0px;
   bottom: 0px;
-  opacity: .3;
-  background-size: 42px;
+  opacity: .1;
   /* size of the background image */
-  z-index: -1;
+  background-size: 42px;
   /* put it behind the other stuff on the page */
-  /* background-color: rgb(35, 64, 192);   */
+  z-index: -1;
+  /* background-color: rgb(0, 0, 0);   */
 }
 
 /* style header */
@@ -51,7 +51,7 @@ header {
 
 header h1 {
   font-weight: bold;
-  font-size: 46px;
+  font-size: 50px;
   margin: 0;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -92,7 +92,7 @@ header nav ul li a {
 }
 
 .profile-pic {
-  width: 55%;
+  width: 35%;
 }
 
 .profile-pic img {
@@ -107,6 +107,7 @@ header nav ul li a {
   margin: 30px;
   text-align: end;
 }
+
 /* "brand statement" */
 .about-me {
   display: flex;
@@ -120,7 +121,7 @@ header nav ul li a {
 
 .section-title {
   font-weight: bold;
-  font-size: 48px;
+  font-size: 44px;
   text-align: left;
   width: 22%;
 }
@@ -132,10 +133,11 @@ header nav ul li a {
 }
 
 .brand-statement p {
-  font-size: 26px;
+  font-size: 22px;
   font-weight: lighter;
   text-align: left;
 }
+
 /* project screenshot section */
 .my-work {
   width: 90%;
@@ -166,6 +168,7 @@ header nav ul li a {
 .flex-item1 {
   flex-grow: 2;
 }
+
 /* reach out section */
 .contact-me {
   display: flex;
@@ -200,6 +203,8 @@ header nav ul li a {
   text-decoration: none;
   color: #000;
 }
+
+/* style footer */
 footer {
   padding: 40px 35px;
   background-color: rgba(214, 167, 96, 0.7);
@@ -211,14 +216,11 @@ footer {
 
 footer h3 {
   color: #000;
-  font-size: 30px;
+  font-size: 35px;
   margin: 0;
+  font-weight: lighter;
 }
 
 footer div {
-  line-height: 1.5;
   text-align: right;
 }
-
-
-/* footer style end */
