--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
   /* background-color: rgb(0, 0, 0);   */
 }
 
-/* style header */
+/* style header and make it sticky*/
 
 header {
   padding: 20px 35px;
@@ -47,6 +47,9 @@ header {
   flex-wrap: wrap;
   top: 0;
   background-color: rgba(214, 167, 96, 0.7);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 header h1 {
@@ -82,6 +85,14 @@ header nav ul li a {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+header nav ul li a:hover {
+  background: darkgoldenrod;
+  color: #000;
+  border-radius: 15px;
+  text-shadow: none;
+}
+
+
 /* style hero picture and quote */
 
 .hero {
@@ -98,6 +109,7 @@ header nav ul li a {
 .profile-pic img {
   margin: 30px;
   height: 400px;
+  border-radius: 15px;
 }
 
 .quote {
@@ -124,6 +136,7 @@ header nav ul li a {
   font-size: 44px;
   text-align: left;
   width: 22%;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .brand-statement {
@@ -162,7 +175,15 @@ header nav ul li a {
   min-width: 100%;
   height: 40vh;
   object-fit: cover;
-  padding: 15px;
+  padding: 5px;
+  border-radius: 15px;
+}
+
+.project-img img:hover {
+  padding: 0;
+  opacity: 0.7;
+  border: solid 1px darkgoldenrod;
+  box-shadow: 0 0 10px rgba(184, 134, 11, 0.8);
 }
 
 .flex-item1 {
@@ -190,7 +211,6 @@ header nav ul li a {
   color: #000;
   align-items: center;
   border-left: darkgoldenrod solid 3px;
-
 }
 
 .contact-container img {
@@ -199,7 +219,12 @@ header nav ul li a {
   object-fit: cover;
 }
 
-.flex-item-1 a {
+.flex-item:hover {
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(184, 134, 11, 0.6);
+}
+
+.e-mail a {
   text-decoration: none;
   color: #000;
 }
@@ -220,6 +245,7 @@ footer h3 {
   font-size: 35px;
   margin: 0;
   font-weight: lighter;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 footer div {
