added text box descriptions to project images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 :root {
-  --primary-color: var(darkgoldenrod);
+  --primary-color: var(#b8860b);
   --secondary-color: var(#000);
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -16,9 +17,7 @@ body {
 /* make full page background image */
 
 .background-image {
-  /* positioned according to parent and previous sibling */
   position: relative;
-  /* element dimensions */
   height: 100%;
   width: 100%;
 }
@@ -27,17 +26,13 @@ body {
   content: "";
   background-image: url("../images/Orange-Background-Wallpaper-HD-16464.png");
   background-repeat: repeat;
-  /* position without taking parent or sibling position into account */
   position: absolute;
-  /* when absolute, 0px is the top-left pixel of the page */
   top: 0px;
   left: 0px;
   right: 0px;
   bottom: 0px;
   opacity: .1;
-  /* size of the background image */
   background-size: 42px;
-  /* put it behind the other stuff on the page */
   z-index: -1;
   /* background-color: rgb(0, 0, 0);   */
 }
@@ -54,6 +49,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 9999;
 }
 
 header h1 {
@@ -111,7 +107,7 @@ header nav ul li a:hover {
 }
 
 .profile-pic img {
-  margin: 30px;
+  margin: 40px;
   height: 400px;
   border-radius: 15px;
 }
@@ -125,7 +121,7 @@ header nav ul li a:hover {
 }
 
 /* "brand statement" */
-.about-me {
+.about-me-container {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -146,7 +142,7 @@ header nav ul li a:hover {
 .brand-statement {
   width: 65%;
   padding: 15px;
-  border-left: var(--primary-color) solid 3px;
+  border-left: darkgoldenrod solid 3px;
 }
 
 .brand-statement p {
@@ -156,7 +152,7 @@ header nav ul li a:hover {
 }
 
 /* project screenshot section */
-.my-work {
+.my-work-container {
   width: 90%;
   display: flex;
   justify-content: space-around;
@@ -172,7 +168,11 @@ header nav ul li a:hover {
   padding: 15px;
   justify-content: space-between;
   width: 65%;
-  border-left: var(--primary-color) solid 3px;
+  border-left: darkgoldenrod solid 3px;
+}
+
+.project-img {
+  position: relative;
 }
 
 .project-img img {
@@ -186,7 +186,7 @@ header nav ul li a:hover {
 .project-img img:hover {
   padding: 0;
   opacity: 0.7;
-  border: solid 1px var(--primary-color);
+  border: solid 1px darkgoldenrod;
   box-shadow: 0 0 10px rgba(184, 134, 11, 0.8);
 }
 
@@ -194,8 +194,23 @@ header nav ul li a:hover {
   flex-grow: 2;
 }
 
+/* text box for project images */
+.text-block {
+  position: absolute;
+  bottom: 100px;
+  left: 10px;
+  background-color: rgba(184, 134, 11, 0.8);
+  color: var(--secondary-color);
+  padding: 5px 15px;
+  text-align: center
+}
+
+.text-block p {
+  font-size: 12px;
+}
+
 /* reach out section */
-.contact-me {
+.contact-me-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -214,7 +229,7 @@ header nav ul li a:hover {
   font-size: 18px;
   color: var(--secondary-color);
   align-items: center;
-  border-left: var(--primary-color) solid 3px;
+  border-left: darkgoldenrod solid 3px;
 }
 
 .contact-container img {
@@ -239,7 +254,7 @@ footer {
   background-color: rgba(214, 167, 96, 0.7);
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
 }
