--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,23 @@
 :root {
-  --primary-color: var(#b8860b);
-  --secondary-color: var(#000);
+  --primary-color: #b8860b;
+  --secondary-color: #000;
+  --primary-shadow-color: rgba(184, 134, 11, 0.7);
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   color: var(--secondary-color);
   font-family: Arial, Helvetica, sans-serif;
 }
-
 /* make full page background image */
-
 .background-image {
   position: relative;
   height: 100%;
   width: 100%;
 }
-
 .background-image::after {
   content: "";
   background-image: url("../images/Orange-Background-Wallpaper-HD-16464.png");
@@ -34,42 +30,37 @@ body {
   opacity: .1;
   background-size: 42px;
   z-index: -1;
-  /* background-color: rgb(0, 0, 0);   */
 }
-
-/* style header and make it sticky*/
-
-header {
-  padding: 20px 35px;
+/* style header and footer sections, make header sticky */
+header,
+footer {
   display: flex;
-  justify-content: space-between;
+  background-color: rgba(184, 134, 11, 0.7);
+  padding: 20px 35px;
   flex-wrap: wrap;
-  top: 0;
-  background-color: rgba(214, 167, 96, 0.7);
+  justify-content: space-between;
+  align-items: center;
+}
+header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 9999;
 }
-
 header h1 {
   font-weight: bold;
   font-size: 50px;
   margin: 0;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
 header a {
   text-decoration: none;
   color: var(--secondary-color);
 }
-
 /* move nav inline and left */
-
 header nav {
   margin: 7px 0;
 }
-
 header nav ul {
   display: flex;
   flex-wrap: wrap;
@@ -77,41 +68,43 @@ header nav ul {
   align-items: center;
   list-style: none;
 }
-
 header nav ul li a {
-  padding: 10px 15px;
+  padding: 15px;
   font-weight: lighter;
   font-size: 36px;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
 header nav ul li a:hover {
-  background-color: darkgoldenrod;
-  color: var(--secondary-color);
+  background-color: var(--primary-color);
   border-radius: 15px;
   text-shadow: none;
 }
-
-
+footer h4 {
+  color: var(--secondary-color);
+  font-size: 20px;
+  margin: 0;
+  font-weight: lighter;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+footer div {
+  text-align: right;
+}
+/* header and footer end */
 /* style hero picture and quote */
-
 .hero {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
 }
-
 .profile-pic {
   width: 35%;
 }
-
 .profile-pic img {
   margin: 40px;
   height: 400px;
   border-radius: 15px;
 }
-
 .quote {
   width: 40%;
   font-size: 26px;
@@ -119,9 +112,9 @@ header nav ul li a:hover {
   margin: 30px;
   text-align: end;
 }
-
-/* "brand statement" */
-.about-me-container {
+/* hero section end */
+/* about, work, and contact sections styles */
+.section-container {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -130,7 +123,6 @@ header nav ul li a:hover {
   width: 90%;
   margin: 0 auto 35px auto;
 }
-
 .section-title {
   font-weight: bold;
   font-size: 44px;
@@ -138,43 +130,29 @@ header nav ul li a:hover {
   width: 22%;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
-.brand-statement {
+/* "brand statement" */
+.about-container {
   width: 65%;
   padding: 15px;
-  border-left: darkgoldenrod solid 3px;
+  border-left: var(--primary-color) solid 3px;
 }
-
-.brand-statement p {
+.about-container p {
   font-size: 22px;
   font-weight: lighter;
   text-align: left;
 }
-
 /* project screenshot section */
-.my-work-container {
-  width: 90%;
-  display: flex;
-  justify-content: space-around;
-  margin: 0 auto 35px auto;
-  padding: 20px;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-.flex-container {
+.project-container {
   display: flex;
   flex-wrap: wrap;
   padding: 15px;
   justify-content: space-between;
   width: 65%;
-  border-left: darkgoldenrod solid 3px;
+  border-left: var(--primary-color) solid 3px;
 }
-
 .project-img {
   position: relative;
 }
-
 .project-img img {
   min-width: 100%;
   height: 40vh;
@@ -182,44 +160,30 @@ header nav ul li a:hover {
   padding: 5px;
   border-radius: 15px;
 }
-
-.project-img img:hover {
+.project-img:hover {
   padding: 0;
   opacity: 0.7;
-  border: solid 1px darkgoldenrod;
-  box-shadow: 0 0 10px rgba(184, 134, 11, 0.8);
+  border: solid 1px var(--primary-color);
+  border-radius: 12px;
+  box-shadow: 0 0 10px var(--primary-shadow-color);
 }
-
-.flex-item1 {
+#image-1 {
   flex-grow: 2;
 }
-
 /* text box for project images */
 .text-block {
   position: absolute;
   bottom: 100px;
   left: 10px;
-  background-color: rgba(184, 134, 11, 0.8);
+  background-color: var(--primary-shadow-color);
   color: var(--secondary-color);
   padding: 5px 15px;
   text-align: center
 }
-
 .text-block p {
   font-size: 12px;
 }
-
 /* reach out section */
-.contact-me-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: 0 auto 35px auto;
-  padding: 20px;
-  flex-wrap: wrap;
-  width: 90%;
-}
-
 .contact-container {
   height: 100px;
   display: flex;
@@ -229,47 +193,21 @@ header nav ul li a:hover {
   font-size: 18px;
   color: var(--secondary-color);
   align-items: center;
-  border-left: darkgoldenrod solid 3px;
+  border-left: var(--primary-color) solid 3px;
   flex-wrap: wrap;
 }
-
 .contact-container img {
   min-width: 40%;
   height: 5vh;
   object-fit: cover;
 }
-
 .flex-item:hover {
   padding: 10px;
-  box-shadow: 0 0 10px rgba(184, 134, 11, 0.6);
+  box-shadow: 0 0 10px var(--primary-shadow-color);
 }
-
 .e-mail a {
   text-decoration: none;
   color: var(--secondary-color);
-}
-
-/* style footer */
-footer {
-  padding: 40px 35px;
-  background-color: rgba(214, 167, 96, 0.7);
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-footer h4 {
-  color: var(--secondary-color);
-  font-size: 20px;
-  margin: 0;
-  font-weight: lighter;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-footer div {
-  text-align: right;
 }
 /* mobile device optimization */
 @media screen and (max-width: 980px) {
@@ -289,48 +227,74 @@ footer div {
   header nav ul li a {
     font-size: 20px;
   }
-  footer h4, footer div {
+  footer h4,
+  footer div {
     text-align: center;
     width: 100%;
   }
-  .profile-pic, .quote {
+  .profile-pic,
+  .quote {
     width: 100%;
   }
   .quote {
     text-align: center;
   }
-  .flex-container {
+  .project-container {
     justify-content: center;
+  }
+  .section-container {
+    align-items: flex-start;
   }
 }
 @media screen and (max-width: 768px) {
-  .profile-pic, .quote {
+  header {
+    position: relative;
+  }
+  .profile-pic,
+  .quote {
     display: flex;
     justify-content: center;
   }
-  header { position: relative;}
+  .contact-container {
+    height: 150px;
+  }
+  .contact-container img {
+    height: 3vh;
+    object-fit: contain;
+    width: 100%;
+  }
+  .e-mail,
+  .phone-number {
+    font-size: 22px;
+  }
 }
 @media screen and (max-width: 575px) {
-  .flex-container, .brand-statement, .contact-container {
-    border-left: none;
+  .section-container {
+    width: 100%;
+    margin: 0;
   }
   .section-title {
     justify-content: center;
     flex: 1 100%;
     text-align: center;
+    border-bottom: solid 2px var(--primary-color);
   }
-  .brand-statement {
-    padding: 0;
-    width: 100%;
-  }
+  .project-container,
+  .about-container,
   .contact-container {
-    justify-content: center;
-    padding: 0;
+    border-left: none;
+    width: 100%;
+    padding: 5px;
+  }
+  .about-container {
+    padding: 8px 8px 8px 10px;
     width: 100%;
   }
-  .flex-item.linkedin-link img, .flex-item.github-link img {
-    flex: 1 100%;
+  .flex-item {
+    padding: 5px;
   }
-
-
+  .e-mail,
+  .phone-number {
+    font-size: 18px;
+  }
 }
